--- a/deep-learning-with-pytorch-step-by-step/Part-III-NLP/02_attention.ipynb
+++ b/deep-learning-with-pytorch-step-by-step/Part-III-NLP/02_attention.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyON5bWygil6+Kyn78zw46pm",
+      "authorship_tag": "ABX9TyPZdc8B2hbhb7CyuIBnkAKj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -91,7 +91,7 @@
       ],
       "metadata": {
         "id": "wlXOl_Holz6M",
-        "outputId": "3a72f73c-4e8d-4b0b-df1c-9dc6bde52d8e",
+        "outputId": "44bb80c2-e10c-4584-dc41-1d91e6c78994",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -167,10 +167,10 @@
       ],
       "metadata": {
         "id": "tfnZyAI5nVL0",
-        "outputId": "42ee67b7-0f63-40c4-85d5-f4a8af3ded95",
+        "outputId": "77f8fb07-95df-4deb-8706-0f3e06fc88d4",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 295
+          "height": 0
         }
       },
       "execution_count": 4,
@@ -205,10 +205,10 @@
       ],
       "metadata": {
         "id": "ND78M8VHnj7w",
-        "outputId": "1bea1c3e-0955-45ed-fd30-3372fa113a29",
+        "outputId": "b4004db6-ae29-4637-fe15-88b40d215b49",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 295
+          "height": 0
         }
       },
       "execution_count": 5,
@@ -275,10 +275,10 @@
       ],
       "metadata": {
         "id": "uLYCNOICACwv",
-        "outputId": "ff658555-cc81-4130-b6c1-6358082830e0",
+        "outputId": "3043eb54-c7e9-4982-9e9d-843f8b2ba332",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 178
+          "height": 0
         }
       },
       "execution_count": 7,
@@ -328,50 +328,157 @@
       }
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "hidden_state = torch.zeros(2)\n",
-        "hidden_state"
+        "###Encoder"
       ],
       "metadata": {
-        "id": "QW0r77mzsKad",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "08a314e9-4acc-4a01-e73d-dafa1331db22"
+        "id": "kZnCTrudIYpz"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Encoder(nn.Module):\n",
+        "  def __init__(self, n_features, hidden_dim):\n",
+        "    super().__init__()\n",
+        "\n",
+        "    self.hidden_dim = hidden_dim\n",
+        "    self.n_features = n_features\n",
+        "    self.hidden = None\n",
+        "    self.basic_rnn = nn.GRU(self.n_features, self.hidden_dim, batch_first=True)\n",
+        "\n",
+        "  def forward(self, X):\n",
+        "    rnn_out, self.hidden = self.basic_rnn(X)\n",
+        "    return rnn_out  # N, L, F"
+      ],
+      "metadata": {
+        "id": "QW0r77mzsKad"
       },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "tensor([0., 0.])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 9
-        }
-      ]
+      "execution_count": 8,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Since the final hidden state is a representation of the full sequence, that’s what\n",
-        "we’re going to use as features for our classifier.\n",
+        "Don’t we need only the final hidden state?\n",
         "\n",
-        "There is a fundamental difference between CNNs and RNNs, though: While there\n",
-        "are several different convolutional layers, each learning its own filters, the RNN\n",
-        "cell is one and the same."
+        "That’s correct. We’ll be using the final hidden state only but in the \"Attention\", we’ll be using all hidden states, and\n",
+        "that’s why we’re implementing the encoder.\n",
+        "\n",
+        "Let’s go over a simple example of encoding: We start with a sequence of coordinates of a \"perfect\" square and split it into source and target sequences:"
       ],
       "metadata": {
         "id": "Jgbo3op7H9gQ"
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "full_seq = (torch.tensor([\n",
+        "  [-1, -1], \n",
+        "  [-1, 1],\n",
+        "  [1, 1],\n",
+        "  [1, -1]\n",
+        "]).float().view(1, 4, 2))\n",
+        "full_seq"
+      ],
+      "metadata": {
+        "id": "0TL0qt6iG4j2",
+        "outputId": "9e72fd75-382f-45fe-f3d1-bf2813ca83e3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[[-1., -1.],\n",
+              "         [-1.,  1.],\n",
+              "         [ 1.,  1.],\n",
+              "         [ 1., -1.]]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "source_seq = full_seq[:, :2]  # first two corners\n",
+        "target_seq = full_seq[:, 2:]  # last two corners"
+      ],
+      "metadata": {
+        "id": "uazDFnOxHTvq"
+      },
+      "execution_count": 11,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
-        "###RNN Cell"
+        "Now, let’s encode the source sequence and take the final hidden state."
+      ],
+      "metadata": {
+        "id": "xkzbSVXGHjCU"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.manual_seed(21)\n",
+        "\n",
+        "encoder = Encoder(n_features=2, hidden_dim=2)\n",
+        "\n",
+        "# output is N, L, F\n",
+        "hidden_seq = encoder(source_seq)\n",
+        "# takes last hidden state\n",
+        "hidden_final = hidden_seq[:, -1:]\n",
+        "hidden_final"
+      ],
+      "metadata": {
+        "id": "-2xSmTDYHlTL",
+        "outputId": "d586fa29-b139-4ed6-a842-e3539357e75e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[[ 0.3105, -0.5263]]], grad_fn=<SliceBackward0>)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Of course, the model is untrained, so the final hidden state above is totally random.\n",
+        "\n",
+        "In a trained model, however, the final hidden state will encode information about\n",
+        "the source sequence.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "eTA3kmoLIKTr"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Decoder"
       ],
       "metadata": {
         "id": "Ay-WCYjWINMf"
@@ -380,13 +487,20 @@
     {
       "cell_type": "markdown",
       "source": [
-        "There is only one cell, which will learn a particular set of weights\n",
-        "and biases, and which will transform the inputs exactly the same\n",
-        "way in every step of the sequence.\n",
+        "The decoder’s goal is to generate the target sequence from an\n",
+        "initial representation; that is, to decode it.\n",
         "\n",
-        "Let’s take a look at some of the internals of an RNN cell.\n",
+        "Sounds like a perfect match, doesn’t it? \n",
         "\n",
-        "![](https://github.com/rahiakela/deep-learning-research-and-practice/blob/main/deep-learning-with-pytorch-step-by-step/Part-III-NLP/images/rnn1.png?raw=1)"
+        "Encode the source sequence, get its\n",
+        "representation (final hidden state), and feed it to the decoder so it generates the\n",
+        "target sequence.\n",
+        "\n",
+        "How does the decoder transform a hidden state into a sequence?\n",
+        "\n",
+        "We can use recurrent layers for that as well.\n",
+        "\n",
+        "![](https://github.com/rahiakela/deep-learning-research-and-practice/blob/main/deep-learning-with-pytorch-step-by-step/Part-III-NLP/images/decoder.png?raw=1)"
       ],
       "metadata": {
         "id": "ke2La37HIOH3"
@@ -395,28 +509,52 @@
     {
       "cell_type": "markdown",
       "source": [
-        "It has three main components:\n",
+        "* In the first step, the initial hidden state is the encoder’s final hidden state ($h_f$, in blue).\n",
+        "* The first cell will output a new hidden state ($h_2$): That’s both the output of that cell and one of the inputs of the next cell.\n",
+        "* Before, we’d only run the final hidden state through a linear layer to produce the logits, but now we’ll run the output of every cell through a linear layer ($w^Th$) to convert each hidden state into predicted coordinates ($x_2$).\n",
+        "* The predicted coordinates are then used as one of the inputs of the second\n",
+        "step ($x_2$).\n",
         "\n",
-        "1. A linear layer to transform the hidden state (in blue)\n",
-        "2. A linear layer to transform the data point from the sequence (in red)\n",
-        "3. An activation function, usually the hyperbolic tangent (TanH), which is applied to the sum of both transformed inputs\n",
+        "The first cell takes both an initial hidden state ($h_f$, in blue, the\n",
+        "encoder’s output) and a first data point ($x_1$, in red).\n",
         "\n",
-        "We can also represent them as equations:\n",
+        "In our case, the decoder’s first data point is actually the last data point in the\n",
+        "source sequence because the target sequence is not a new sequence, but the\n",
+        "continuation of the source sequence.\n",
         "\n",
-        "$$\n",
-        "\\Large\n",
-        "\\begin{array}\n",
-        "&\\text{RNN}: &\\color{#0066CC}{t_h}&\\color{#0066CC}{=}&\\color{#0066CC}{W_{hh}}&\\color{#0066CC}{h_{t-1}}&\\color{#0066CC}{+}&\\color{#0066CC}{b_{hh}}\n",
-        "\\\\\n",
-        "&\\color{red}{t_x}& \\color{red}{=} &\\color{red}{W_{ih}}&\\color{red}{x_{t}}&\\color{red}{+}&\\color{red}{b_{ih}}\n",
-        "\\\\\n",
-        "&\\color{#0066CC}{h_t}&\\color{#0066CC}{=}&\\color{#0066CC}{\\text{tanh}}&\\color{#0066CC}{(t_h}&\\color{#0066CC}{+}&\\color{#0066CC}{t_x)}\n",
-        "\\end{array}\n",
-        "$$"
+        "This is not always the case. In translation, where the target sequence is a new sequence, the first data point is\n",
+        "some \"special\" token that indicates the start of that new sequence.\n",
+        "\n",
+        "There is another small, yet fundamental difference between the\n",
+        "encoder and the decoder: Since the decoder uses the prediction\n",
+        "of last step as input to the next, we’ll have to manually loop over\n",
+        "the generation of the target sequence.\n",
+        "\n",
+        "This also means we need to keep track of the hidden state from\n",
+        "last step to the next, using the hidden state of last step as input\n",
+        "to the next.\n",
+        "\n",
+        "But, instead of making the hidden state both an input and an\n",
+        "output of the forward() method, we can easily handle this by making the hidden state an\n",
+        "attribute of our decoder model.\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "t7vKalfLIgSG"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Decoder(nn.Module):\n",
+        "  pass"
+      ],
+      "metadata": {
+        "id": "iBDqtgUpOBQG"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
