--- a/deep-learning-with-pytorch-step-by-step/Part-III-NLP/02_attention.ipynb
+++ b/deep-learning-with-pytorch-step-by-step/Part-III-NLP/02_attention.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPZdc8B2hbhb7CyuIBnkAKj",
+      "authorship_tag": "ABX9TyMlJw4XSOGsyH+hbobpG6xB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -91,7 +91,7 @@
       ],
       "metadata": {
         "id": "wlXOl_Holz6M",
-        "outputId": "44bb80c2-e10c-4584-dc41-1d91e6c78994",
+        "outputId": "dd04ab5e-186c-4848-b407-a8d39abf55db",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -167,7 +167,7 @@
       ],
       "metadata": {
         "id": "tfnZyAI5nVL0",
-        "outputId": "77f8fb07-95df-4deb-8706-0f3e06fc88d4",
+        "outputId": "172cbbc3-13c0-4241-bae3-0088805c2eea",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 0
@@ -205,7 +205,7 @@
       ],
       "metadata": {
         "id": "ND78M8VHnj7w",
-        "outputId": "b4004db6-ae29-4637-fe15-88b40d215b49",
+        "outputId": "af7ecb5f-3843-4e69-e958-2ab220157fa4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 0
@@ -275,7 +275,7 @@
       ],
       "metadata": {
         "id": "uLYCNOICACwv",
-        "outputId": "3043eb54-c7e9-4982-9e9d-843f8b2ba332",
+        "outputId": "f1a4a6cf-edfa-42d6-b752-11c7e7c974f8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 0
@@ -385,12 +385,12 @@
       ],
       "metadata": {
         "id": "0TL0qt6iG4j2",
-        "outputId": "9e72fd75-382f-45fe-f3d1-bf2813ca83e3",
+        "outputId": "1e783fdb-4d6a-4738-f2c7-3034ad64a725",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -403,7 +403,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 9
         }
       ]
     },
@@ -416,7 +416,7 @@
       "metadata": {
         "id": "uazDFnOxHTvq"
       },
-      "execution_count": 11,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -443,12 +443,12 @@
       ],
       "metadata": {
         "id": "-2xSmTDYHlTL",
-        "outputId": "d586fa29-b139-4ed6-a842-e3539357e75e",
+        "outputId": "f4dc377e-f493-47b3-dbcc-3e60fce51f35",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -458,7 +458,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 11
         }
       ]
     },
@@ -535,7 +535,7 @@
         "to the next.\n",
         "\n",
         "But, instead of making the hidden state both an input and an\n",
-        "output of the forward() method, we can easily handle this by making the hidden state an\n",
+        "output of the `forward()` method, we can easily handle this by making the hidden state an\n",
         "attribute of our decoder model.\n",
         "\n",
         "\n"
@@ -548,123 +548,151 @@
       "cell_type": "code",
       "source": [
         "class Decoder(nn.Module):\n",
-        "  pass"
+        "\n",
+        "  def __init__(self, n_features, hidden_dim):\n",
+        "    super().__init__()\n",
+        "\n",
+        "    self.hidden_dim = hidden_dim\n",
+        "    self.n_features = n_features\n",
+        "    self.hidden_state = None\n",
+        "\n",
+        "    # Simple RNN\n",
+        "    self.basic_rnn = nn.RNN(self.n_features, self.hidden_dim, batch_first=True)\n",
+        "    # regression to produce a logits as outputs\n",
+        "    self.regression = nn.Linear(self.hidden_dim, self.n_features)\n",
+        "\n",
+        "  def init_hidden(self, hidden_seq):\n",
+        "    # We only need the final hidden state\n",
+        "    hidden_final = hidden_seq[:, -1:]  # N, 1, H\n",
+        "    # Initializing decoder’s hidden state using encoder’s final hidden state. \n",
+        "    self.hidden_state = hidden_final.permute(1, 0, 2) # But we need to make it sequence-first\n",
+        "\n",
+        "  def forward(self, X):\n",
+        "    # X is batch first (N, L, F)\n",
+        "    # The recurrent layer both uses and updates the hidden state\n",
+        "    batch_first_output, self.hidden_state = self.basic_rnn(X, self.hidden_state)\n",
+        "\n",
+        "    last_output = batch_first_output[:, -1:]\n",
+        "    out = self.regression(last_output)\n",
+        "\n",
+        "    # The output has the same shape as the input (N, 1, F)\n",
+        "    return out.view(-1, 1, self.n_features)"
       ],
       "metadata": {
         "id": "iBDqtgUpOBQG"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "But there is no other cell, really; it is just the same cell over and over again.\n",
-        "\n",
-        "So, in the second step of the\n",
-        "sequence, the updated hidden state will run through the very same linear layer the\n",
-        "initial hidden state ran through. The same goes for the second data point.\n",
-        "\n",
-        "Let’s dive deeper into the internals of an RNN cell and look at it at the neuron level:\n",
-        "\n",
-        "![](https://github.com/rahiakela/deep-learning-research-and-practice/blob/main/deep-learning-with-pytorch-step-by-step/Part-III-NLP/images/rnn_cell_diagram.png?raw=1)"
+        "So it’s time\n",
+        "to try some decoding to generate a target sequence:"
       ],
       "metadata": {
         "id": "XaIFUnF6JGYe"
       }
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "Since one can choose the number of hidden dimensions, I chose two dimensions,\n",
-        "simply because I want to be able to easily visualize the results. Hence, two blue\n",
-        "neurons are transforming the hidden state.\n",
-        "\n",
-        "\n",
-        "The number of red neurons transforming the data point will\n",
-        "necessarily be the same as the chosen number of hidden\n",
-        "dimensions since both transformed outputs need to be added\n",
-        "together. But this doesn’t mean the data points must have the\n",
-        "same number of dimensions.\n",
-        "\n",
-        "Coincidentally, our data points have two coordinates, but even if\n",
-        "we had 25 dimensions, these 25 features would still be mapped\n",
-        "into two dimensions by the two red neurons.\n",
-        "\n",
-        "Why hyperbolic tangent? Isn’t ReLU a better activation function?\n",
-        "\n",
-        "The hyperbolic tangent has a \"competitive advantage\" here since it maps the feature\n",
-        "space to clearly defined boundaries: the interval (-1, 1). This guarantees that, at every step of the sequence, the hidden state is always within these boundaries.\n",
-        "Given that we have only one linear layer with which to transform the hidden\n",
-        "state, regardless of which step of the sequence it is being used in, it is definitely\n",
-        "convenient to have its values within a predictable range.\n",
-        "\n",
-        "Now, let’s see how an RNN cell works in code.\n"
-      ],
-      "metadata": {
-        "id": "DdhukQWVJm8O"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
-        "torch.manual_seed(19)\n",
+        "torch.manual_seed(21)\n",
         "\n",
-        "n_features = 2\n",
-        "hidden_dim = 2\n",
+        "decoder = Decoder(n_features=2, hidden_dim=2)\n",
         "\n",
-        "rnn_cell = nn.RNNCell(input_size=n_features, hidden_size=hidden_dim)\n",
-        "rnn_state = rnn_cell.state_dict()\n",
-        "rnn_state"
+        "# Initial hidden state will be encoder's final hidden state\n",
+        "decoder.init_hidden(hidden_seq)\n",
+        "# Initial data point is the last element of source sequence\n",
+        "inputs = source_seq[:, -1:]\n",
+        "\n",
+        "target_len = 2\n",
+        "for i in range(target_len):\n",
+        "  print(f\"Hidden: {decoder.hidden_state}\")\n",
+        "  # Predicts coordinates\n",
+        "  outputs = decoder(inputs)\n",
+        "  print(f\"Output: {outputs}\\n\")\n",
+        "  # Predicted coordinates are next step's inputs\n",
+        "  inputs = outputs"
       ],
       "metadata": {
         "id": "fgMpzO1_Cdx1",
-        "outputId": "9c20da39-962a-4fa4-fb57-ce2278085f81",
+        "outputId": "32fc4322-4123-40e5-a292-5684946a46ee",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "OrderedDict([('weight_ih',\n",
-              "              tensor([[ 0.6627, -0.4245],\n",
-              "                      [ 0.5373,  0.2294]])),\n",
-              "             ('weight_hh',\n",
-              "              tensor([[-0.4015, -0.5385],\n",
-              "                      [-0.1956, -0.6835]])),\n",
-              "             ('bias_ih', tensor([0.4954, 0.6533])),\n",
-              "             ('bias_hh', tensor([-0.3565, -0.2904]))])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 10
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hidden: tensor([[[ 0.3105, -0.5263]]], grad_fn=<PermuteBackward0>)\n",
+            "Output: tensor([[[0.3205, 0.1144]]], grad_fn=<ViewBackward0>)\n",
+            "\n",
+            "Hidden: tensor([[[ 0.8898, -0.3653]]], grad_fn=<StackBackward0>)\n",
+            "Output: tensor([[[0.2905, 0.1976]]], grad_fn=<ViewBackward0>)\n",
+            "\n"
+          ]
         }
       ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "We can use these weights to create two linear layers:"
+        "There is one problem with the approach above, though—an untrained model will\n",
+        "make really bad predictions, and these predictions will still be used as inputs for\n",
+        "subsequent steps. \n",
+        "\n",
+        "This makes model training unnecessarily hard because the\n",
+        "prediction error in one step is caused by both the (untrained) model and the\n",
+        "prediction error in the previous step.\n",
+        "\n",
+        "Can’t we use the actual target sequence instead?\n",
+        "\n",
+        "Sure we can! This technique is called teacher forcing."
       ],
       "metadata": {
         "id": "Trg9QDGzMndS"
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "###Teacher Forcing"
+      ],
+      "metadata": {
+        "id": "7Iavvw2ePhga"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "rzT-jadyPizZ"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "linear_input = nn.Linear(n_features, hidden_dim)\n",
-        "linear_hidden = nn.Linear(hidden_dim, hidden_dim)\n",
+        "torch.manual_seed(21)\n",
         "\n",
-        "with torch.no_grad():\n",
-        "  linear_input.weight = nn.Parameter(rnn_state[\"weight_ih\"])\n",
-        "  linear_input.bias = nn.Parameter(rnn_state[\"bias_ih\"])\n",
-        "  linear_hidden.weight = nn.Parameter(rnn_state[\"weight_hh\"])\n",
-        "  linear_hidden.bias = nn.Parameter(rnn_state[\"bias_hh\"])"
+        "decoder = Decoder(n_features=2, hidden_dim=2)\n",
+        "\n",
+        "# Initial hidden state will be encoder's final hidden state\n",
+        "decoder.init_hidden(hidden_seq)\n",
+        "# Initial data point is the last element of source sequence\n",
+        "inputs = source_seq[:, -1:]\n",
+        "\n",
+        "target_len = 2\n",
+        "for i in range(target_len):\n",
+        "  print(f\"Hidden: {decoder.hidden_state}\")\n",
+        "  # Predicts coordinates\n",
+        "  outputs = decoder(inputs)\n",
+        "  print(f\"Output: {outputs}\\n\")\n",
+        "  # Predicted coordinates are next step's inputs\n",
+        "  inputs = outputs"
       ],
       "metadata": {
         "id": "v8JKnoukC_Eo"
