--- a/inside-deep-learing/13-transfer-learning/01_transfer_learning_with_image.ipynb
+++ b/inside-deep-learing/13-transfer-learning/01_transfer_learning_with_image.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPAxgjnlDQRl/GnNtElVNLY",
+      "authorship_tag": "ABX9TyPAiO49z97JJj0nFyNatMuC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -179,7 +179,7 @@
       "metadata": {
         "id": "YTO1Pk4x24PP"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -190,7 +190,7 @@
       "metadata": {
         "id": "nXiYSSxO707X"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -202,7 +202,7 @@
       "metadata": {
         "id": "Bbs8SwBuguUa"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -213,7 +213,7 @@
       "metadata": {
         "id": "RNgnIdhNLdYm"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -239,7 +239,7 @@
       "metadata": {
         "id": "zWpilk2-Kk8V"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -272,7 +272,7 @@
       "metadata": {
         "id": "_chm5G2Z3Eqs"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -286,7 +286,7 @@
       "metadata": {
         "id": "NymODd7xqoW7"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -308,7 +308,7 @@
         },
         "outputId": "6ba9e08d-87ed-4aee-b733-a034903149fe"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -360,7 +360,7 @@
       "metadata": {
         "id": "3JQAT-UDZlGh"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -375,7 +375,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -403,7 +403,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -457,7 +457,7 @@
           "height": 466
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -530,7 +530,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -557,7 +557,7 @@
       "metadata": {
         "id": "rr1Cd0JwWyU7"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -581,7 +581,7 @@
           "height": 807
         }
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -618,7 +618,7 @@
       "metadata": {
         "id": "AaUqm4G_ZL9-"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -636,7 +636,7 @@
           "height": 807
         }
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -661,13 +661,73 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "If you use transfer learning via a pretrained network, you must make\n",
+        "sure your preprocessing of the data matches how the model was originally trained.\n",
+        "\n",
+        "Otherwise, the model will not get what it initially expects, and the weights become\n",
+        "meaningless."
+      ],
+      "metadata": {
+        "id": "r2cTee6BgPtx"
+      }
+    },
+    {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "class NormalizeInput(nn.Module):\n",
+        "  def __init__(self, base_model):\n",
+        "    \"\"\"\n",
+        "    base_model: the original ResNet model that needs to have it's inputs pre-processed\n",
+        "    \"\"\"\n",
+        "    super(NormalizeInput, self).__init__()\n",
+        "\n",
+        "    # The model that we want to use, but need’s its input normalized first\n",
+        "    self.base_model = base_model\n",
+        "\n",
+        "    # The mean and standard deviation used for ImageNet normalization. We just have to accept these “magic” numbers that everyone uses\n",
+        "    self.mean = nn.Parameter(torch.tensor([0.485, 0.456, 0.406]).view(1, 3, 1, 1), requires_grad=False)\n",
+        "    self.std = nn.Parameter(torch.tensor([0.229, 0.224, 0.225]).view(1, 3, 1, 1), requires_grad=False)\n",
+        "\n",
+        "  def forward(self, X):\n",
+        "    # Normalize the input, then feed it into the model we want to use\n",
+        "    X = (X - self.mean) / self.std\n",
+        "    return self.base_model(X)"
+      ],
       "metadata": {
         "id": "zQ3pwg7lbgGS"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# let's wraps the pretrained model with this specific normalizer\n",
+        "model_pretrained = NormalizeInput(model_pretrained)"
+      ],
+      "metadata": {
+        "id": "SvfxaHCmkCe8"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Training with warm starts"
+      ],
+      "metadata": {
+        "id": "aecRwk8kkNHu"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "LqPpPZ8qkOnn"
+      }
     }
   ]
 }
