--- a/deep-learning-with-pytorch-step-by-step/Part-III-NLP/02_attention.ipynb
+++ b/deep-learning-with-pytorch-step-by-step/Part-III-NLP/02_attention.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPh8an/IYtvCYfwCLhvO19a",
+      "authorship_tag": "ABX9TyOKEB+UsEPnTScYUdceq0Ql",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -91,7 +91,7 @@
       ],
       "metadata": {
         "id": "wlXOl_Holz6M",
-        "outputId": "2ff24a9b-52a6-418e-fda4-01ba439a15ed",
+        "outputId": "481fd898-b730-4bd1-c8d0-d6db1a79287e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -167,7 +167,7 @@
       ],
       "metadata": {
         "id": "tfnZyAI5nVL0",
-        "outputId": "abf90adb-37e1-421e-a7b9-3ae347875ec1",
+        "outputId": "660006db-3aa1-4004-9260-057a0b5a22e9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 0
@@ -205,7 +205,7 @@
       ],
       "metadata": {
         "id": "ND78M8VHnj7w",
-        "outputId": "ff39d550-2e92-4f51-f0ba-36eeeb546552",
+        "outputId": "8f71d27d-5a27-4fa4-e242-6ff42bcd96a3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 0
@@ -275,7 +275,7 @@
       ],
       "metadata": {
         "id": "uLYCNOICACwv",
-        "outputId": "dd49a31a-f6e2-4415-92b0-c7e33bea6d25",
+        "outputId": "a700a4b7-a9d1-4011-afe7-b5e4d1b9990e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 0
@@ -385,7 +385,7 @@
       ],
       "metadata": {
         "id": "0TL0qt6iG4j2",
-        "outputId": "77f3e328-7775-4e95-f34a-abaf9300f6c2",
+        "outputId": "e3dec995-758b-4e09-e919-65191eecb71d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -443,7 +443,7 @@
       ],
       "metadata": {
         "id": "-2xSmTDYHlTL",
-        "outputId": "5bdeab92-0b96-4a6f-963c-03649ca166ae",
+        "outputId": "7c41df66-df34-4270-d42e-4fa109a65cfa",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -617,7 +617,7 @@
       ],
       "metadata": {
         "id": "fgMpzO1_Cdx1",
-        "outputId": "6a434279-6999-483c-c182-c02d922e0e44",
+        "outputId": "0b88c421-9cd8-45d1-e1e4-f007a2868b69",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -695,7 +695,7 @@
       ],
       "metadata": {
         "id": "v8JKnoukC_Eo",
-        "outputId": "ad3ff7ef-06d8-49b3-ea09-58c786b862b7",
+        "outputId": "5952fc05-7b94-42b3-dd2b-0d1277470282",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -768,12 +768,12 @@
       ],
       "metadata": {
         "id": "U7THbRPfR4tO",
-        "outputId": "223d3c27-24b6-48c9-8d4a-c6fcad769a13",
+        "outputId": "64fb64a7-3d7d-4511-b14c-20b8e1b7c6de",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 17,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -807,7 +807,16 @@
         "\n",
         "Let’s go over it once again:\n",
         "\n",
-        "* "
+        "* The encoder receives the source sequence ($x_0$ and $x_1$, in red) and generates the representation of the source sequence, its final hidden state ($h_f$, in blue).\n",
+        "* The decoder receives the hidden state from the encoder ($h_f$, in blue), together with the last known element of the sequence ($x_1$, in red), to output a hidden state ($h_2$, in green) that is converted into the first set of predicted coordinates($x_2$, in green) using a linear layer ($w^Th$, in green).\n",
+        "* In the next iteration of the loop, the model randomly uses the predicted ($x_2$, in green) or the actual ($x_2$, in red) set of coordinates as one of its inputs to output the second set of predicted coordinates ($x_3$), thus achieving the target length.\n",
+        "* The final output of the encoder + decoder model is the full sequence of\n",
+        "predicted coordinates: [$x_2$, $x_3$].\n",
+        "\n",
+        "We can assemble the bits and pieces we’ve developed so far into a model that,\n",
+        "given the encoder and decoder models, implements a `forward()` method that splits\n",
+        "the input into the source and target sequences, loops over the generation of the\n",
+        "target sequence, and implements teacher forcing in training mode."
       ],
       "metadata": {
         "id": "_iwisxpbZXCd"
@@ -816,13 +825,8 @@
     {
       "cell_type": "code",
       "source": [
-        "torch.manual_seed(19)\n",
-        "\n",
-        "n_features = 2\n",
-        "hidden_dim = 2\n",
-        "\n",
-        "rnn = nn.RNN(input_size=n_features, hidden_size=hidden_dim)\n",
-        "rnn.state_dict()"
+        "class EncoderDecoder(nn.Module):\n",
+        "  "
       ],
       "metadata": {
         "id": "3j6coSQ3KXoY",
